2004-01-09  Andras Varga

	* modinsp.cc/h/tcl,tkapp.cc/h: implemented bubble() -- submodules
	can display a bubble with a short message like "Queue full!".

2004-01-06  Andras Varga

        * virtual bool isGUI() {return false;}

2004-01-01  Andras Varga
	* tkapp.cc/h: handle new cEnvir notifications: moduleCreated(),
	moduleDeleted(), connectionCreated(), connectionRemoved(),
	displayStringChanged(cGate*), displayStringChanged(cModule*),
	displayStringAsParentChanged()

2003-12-30  Andras Varga

	* new omnetpp.h entries:
	[Tkenv]/methodcalls-delay: sets delay after method call animation
	[Tkenv]/show-layouting: show layouting process of network graphics

2003-12-21  Andras Varga

	* graphlayout.cc/h, modinsp.cc: implemented automatic layouting, using
	the SpringEmbedder algorithm. Modules which have no explicit positions
	assigned (first two args of the "p=" tag are missing) will be
	autolayouted. Predefined row, matrix, ring, etc arrangements (defined
	via 3rd and further args of the "p=" tag) will be moved as one unit
	(the full row/matrix/ring will be moved	to an optimal place.)
	- One tricky thing: if the full graph is too big after layouting,
	it is scaled back so that it fits on the screen, UNLESS IT CONTAINS
	ANY FIXED-POSITION MODULE. (For obvious reasons: if there's a module
	with manually specified position, we don't want to move that one).
	- Size is ignored by the present layouter, so longish modules (such as
	an Ethernet segment) may produce funny results.
	- Parameters to the layouter algoritm (repulsive/attractive forces,
	number of iterations,random number seed) can be specified in the "l="
	tag to the parent module, but this is experimental and may change.
	Currently parameters (with their default values):
	"l=<repulsion=10>,<attraction=0.3>,<edgelen=40>,<maxiter=200>,<seed>"
	- Tip: to present rescaling, specify a bounding box for the parent
	module module that is large enough, e.g. "b=2000,3000"

2003-12-18  Andras Varga
