@@ -37,6 +37,7 @@ proc save_tkenvrc {{fname ".tkenvrc"}} {
             animation_msgcolors
             penguin_mode
             showlayouting
+            bubbles
             animation_speed
             bkpts_enabled
         } {
